[MISC-02] JetBrains reformatted my code.